src/test/deca/context/invalid/created/testPass1/declObjet.deca
// Description :
//    Test invalide : Opération d'addition sur des booléens
//
// Résultats :
//    Erreur contextuelle
//    Ligne 7: DoubleClassDeclarationException: Class names must be unique. You have declared the class Object more than once.
class Object{}